--- a/index.html
+++ b/index.html
@@ -4,195 +4,214 @@
     <title>Priscilla Nzula - Portfolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-dySpfJ7fbH3+icYUXPoqqt0AgOZ2D11n1NhrTnhCg3GxWT3pGELKjOEf7Q+d+Xb2BOMD1/y1X7ibK7q2gO2c0A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #f4f4f9; /* Light background */
-            color: #333; /* Standard text color for readability */
-            font-family: Arial, sans-serif;
+            background-color: #121212;
+            color: #ffffff;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
         }
 
-        h2, h3 {
-            color: #007bff; /* Consistent blue for headings */
-        }
-
-        #nav ul.links li a {
-            color: #333; /* Dark text for light background */
-            font-weight: bold;
+        h1, h2, h3 {
+            font-weight: 700;
             text-transform: uppercase;
-            padding: 10px;
-            text-decoration: none;
-            transition: color 0.3s ease;
+            color: #FFD700;
         }
 
-        #nav ul.links li a:hover {
-            color: #007bff; /* Blue hover effect */
-        }
-
-        section.main {
-            margin: 2rem 0;
-            padding: 1.5rem;
-            background: #ffffff; /* White background for content areas */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Soft shadow for card effect */
-            border-radius: 10px; /* Rounded corners */
-        }
-
-        ul {
-            list-style-type: disc;
-            margin-left: 2rem;
+        p {
+            line-height: 1.6;
+            color: #d3d3d3;
         }
 
         a {
-            color: #007bff; /* Links in blue */
+            color: #FFD700;
             text-decoration: none;
+            font-weight: 500;
         }
 
         a:hover {
-            text-decoration: underline; /* Underline effect on hover */
+            text-decoration: underline;
         }
 
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
+        #wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
         }
 
-        .image.fit {
-            border-radius: 50%;
-            max-width: 100%;
-            height: auto;
+        #intro {
+            text-align: center;
+            margin-bottom: 40px;
         }
 
-        .actions .button {
-            background: #007bff;
-            color: #fff;
-            border: none;
-            padding: 0.75rem 1.5rem;
-            text-transform: uppercase;
-            border-radius: 5px;
-            text-decoration: none;
+        #intro h1 {
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
+
+        #intro p {
+            margin: 10px 0;
+        }
+
+        #intro .actions {
+            margin-top: 20px;
+        }
+
+        #intro .actions .button {
+            background: #FFD700;
+            color: #121212;
+            padding: 10px 20px;
+            border-radius: 25px;
             font-weight: bold;
-            transition: background 0.3s ease;
+            text-transform: uppercase;
         }
 
-        .actions .button:hover {
-            background: #0056b3;
+        #nav {
+            background: #1e1e1e;
+            width: 100%;
+            text-align: center;
+            padding: 15px 0;
+            position: sticky;
+            top: 0;
+        }
+
+        #nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+        }
+
+        #nav ul li {
+            display: inline;
+        }
+
+        #nav ul li a {
+            color: #FFD700;
+            font-weight: bold;
+            padding: 10px 20px;
+            border-radius: 20px;
+        }
+
+        #nav ul li a:hover {
+            background: #FFD700;
+            color: #121212;
+        }
+
+        section {
+            width: 80%;
+            margin: 20px auto;
+            background: #1e1e1e;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        }
+
+        .main {
+            margin-bottom: 30px;
+        }
+
+        .main img {
+            width: 100%;
+            border-radius: 15px;
         }
 
         footer {
+            margin-top: 20px;
             text-align: center;
-            padding: 1rem;
-            background-color: #f4f4f9;
-            color: #333;
-            font-size: 0.9rem;
+            padding: 10px;
+            background: #1e1e1e;
+            color: #FFD700;
+        }
+
+        footer p {
+            margin: 0;
         }
     </style>
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
-<body class="is-preload">
-    <div id="wrapper" class="fade-in">
+<body>
+    <div id="wrapper">
         <!-- Intro -->
         <div id="intro">
             <h1>Priscilla Nzula</h1>
             <p>Data Scientist | Data Analyst</p>
             <p>Transforming complex datasets into strategic business solutions</p>
-            <ul class="actions">
-                <li><a href="#about" class="button icon solid solo fa-arrow-down scrolly">Explore</a></li>
-            </ul>
+            <div class="actions">
+                <a href="#about" class="button">Explore</a>
+            </div>
         </div>
 
         <!-- Navigation -->
         <nav id="nav">
-            <ul class="links">
+            <ul>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#case-studies">Case Studies</a></li>
-                <li><a href="#skills">Technical Competencies</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
 
         <!-- About Me -->
         <section id="about" class="main">
-            <div class="container">
-                <h2>About Me</h2>
-                <div class="row">
-                    <div class="col-4"><img src="images/profile.jpg" alt="Priscilla Nzula" class="image fit" /></div>
-                    <div class="col-8">
-                        <p>Innovative Data Scientist with expertise in machine learning, statistical analysis, and data visualization. Passionate about solving business problems using data-driven insights.</p>
-                    </div>
-                </div>
-            </div>
+            <h2>About Me</h2>
+            <p>Innovative Data Scientist with expertise in machine learning, statistical analysis, and data visualization. Passionate about solving business problems using data-driven insights.</p>
         </section>
 
         <!-- Projects -->
         <section id="projects" class="main">
-            <div class="container">
-                <h2>Projects</h2>
-                <div class="row">
-                    <div class="col-6"><h3>Pro Realty Real Estate Analysis</h3><p>Predicting house prices using ML models.</p><a href="https://github.com/priscillanzula/pro_realty.git">View Project</a></div>
-                    <div class="col-6"><h3>SyriaTel Customer Churn Analysis</h3><p>Churn prediction model for telecom.</p><a href="https://github.com/Saoke1219/syriatel_churn/blob/nzula_priscilla/">View Project</a></div>
-                </div>
+            <h2>Projects</h2>
+            <div>
+                <h3>Pro Realty Real Estate Analysis</h3>
+                <p>Predicting house prices using ML models.</p>
+                <a href="https://github.com/priscillanzula/pro_realty.git">View Project</a>
+            </div>
+            <div>
+                <h3>SyriaTel Customer Churn Analysis</h3>
+                <p>Churn prediction model for telecom.</p>
+                <a href="https://github.com/Saoke1219/syriatel_churn/blob/nzula_priscilla/">View Project</a>
             </div>
         </section>
 
         <!-- Case Studies -->
         <section id="case-studies" class="main">
-            <div class="container">
-                <h2>Case Studies</h2>
-                <h3>Kwanza Tukule Business Analysis</h3>
-                <p>Conducted a data-driven analysis to enhance sales performance and customer retention.</p>
-                <a href="#">Read More</a>
-            </div>
+            <h2>Case Studies</h2>
+            <h3>Kwanza Tukule Business Analysis</h3>
+            <p>Conducted a data-driven analysis to enhance sales performance and customer retention.</p>
+            <a href="#">Read More</a>
         </section>
 
-        <!-- Technical Competencies -->
+        <!-- Skills -->
         <section id="skills" class="main">
-            <div class="container">
-                <h2>Technical Competencies</h2>
-                <h3>Programming</h3>
-                <ul>
-                    <li>Python, SQL, JavaScript</li>
-                </ul>
-                <h3>Frameworks</h3>
-                <ul>
-                    <li>React, Flask</li>
-                </ul>
-                <h3>Databases</h3>
-                <ul>
-                    <li>PostgreSQL, MySQL</li>
-                </ul>
-                <h3>Libraries</h3>
-                <ul>
-                    <li>Pandas, NumPy, Scikit-learn, Matplotlib, Seaborn</li>
-                </ul>
-                <h3>Version Control</h3>
-                <ul>
-                    <li>Git & GitHub</li>
-                </ul>
-                <h3>Other Tools</h3>
-                <ul>
-                    <li>Google Sheets, Google Analytics, Microsoft Teams</li>
-                </ul>
-            </div>
+            <h2>Skills</h2>
+            <ul>
+                <li>Programming: Python, SQL, JavaScript</li>
+                <li>Frameworks: React, Flask</li>
+                <li>Databases: PostgreSQL, MySQL</li>
+                <li>Libraries: Pandas, NumPy, Scikit-learn, Matplotlib, Seaborn</li>
+                <li>Version Control: Git & GitHub</li>
+                <li>Other Tools: Google Sheets, Google Analytics, Microsoft Teams</li>
+            </ul>
         </section>
 
         <!-- Contact -->
         <section id="contact" class="main">
-            <div class="container">
-                <h2>Contact</h2>
-                <p>Email: <a href="mailto:danielpriscilla61@gmail.com">danielpriscilla61@gmail.com</a></p>
-                <p>Phone: +254 792 214 211</p>
-                <p>Location: Nairobi, Kenya</p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/priscilla-nzula">LinkedIn Profile</a></p>
-                <p>GitHub: <a href="https://github.com/priscillanzula">GitHub Profile</a></p>
-            </div>
+            <h2>Contact</h2>
+            <p>Email: <a href="mailto:danielpriscilla61@gmail.com">danielpriscilla61@gmail.com</a></p>
+            <p>Phone: +254 792 214 211</p>
+            <p>Location: Nairobi, Kenya</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/priscilla-nzula">LinkedIn Profile</a></p>
+            <p>GitHub: <a href="https://github.com/priscillanzula">GitHub Profile</a></p>
         </section>
 
         <footer>
-            <p>Priscilla Nzula | Portfolio</p>
+            <p>&copy; 2025 Priscilla Nzula</p>
         </footer>
     </div>
 </body>
